// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Fetcher > 200 OK! 1`] = `
{
  "body": [
    1,
    2,
    3,
  ],
  "res": Response {},
  "url": Any<URL>,
}
`;

exports[`Fetcher > 204 1`] = `
{
  "body": null,
  "res": Response {},
  "url": Any<URL>,
}
`;

exports[`Fetcher > 404 1`] = `
{
  "body": Any<ReadableStream>,
  "res": Response {},
  "url": Any<URL>,
}
`;

exports[`Fetcher > Custom options iso fetcher 1`] = `
{
  "body": {
    "accept": "*/*",
    "accept-encoding": "gzip, deflate",
    "accept-language": "*",
    "connection": "keep-alive",
    "host": "redacted",
    "sec-fetch-mode": "cors",
    "user-agent": "node",
    "x-fetcher": "custom",
  },
  "res": Response {},
  "url": Any<URL>,
}
`;

exports[`Fetcher > JSON Error 1`] = `
{
  "body": {
    "code": 9,
    "message": "Data should be array",
    "name": "CustomError",
  },
  "res": Response {},
  "url": Any<URL>,
}
`;
